force-app/main/default/objects/CLQ_OCOT_Finding__c/CLQ_OCOT_Finding__c.object-meta.xml
<CustomObject>
    <label>OCOT Finding</label>
    <nameField>
        <label>OCOT Finding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OCOT Finding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>