force-app/main/default/objects/CLQ_OCOT_Finding__c/fields/CLQ_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domain</fullName>
            </value>
            <value>
                <fullName>Rule</fullName>
            </value>
            <value>
                <fullName>Standard Findings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>