force-app/main/default/objects/CLQ_OCOT_Finding__c/fields/CLQ_Observer_s_Comment__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Observer_s_Comment__c</fullName>
    <label>Observer&apos;s Comment</label>
    <type>TextArea</type>
</CustomField>