force-app/main/default/objects/CLQ_OCOT_Finding__c/fields/CLQ_OCOT_Rules_Inspected__c.field-meta.xml
<CustomField>
    <fullName>CLQ_OCOT_Rules_Inspected__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OCOT Rules Inspected</label>
    <referenceTo>CLQ_OCOT_Rules_Inspected__c</referenceTo>
    <relationshipLabel>OCOT Finding</relationshipLabel>
    <relationshipName>OCOT_Finding</relationshipName>
    <type>Lookup</type>
</CustomField>