force-app/main/default/objects/CLQ_OCOT_Finding__c/fields/CLQ_Provider_s_Response__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Provider_s_Response__c</fullName>
    <label>Interview Response</label>
    <type>TextArea</type>
</CustomField>