force-app/main/default/objects/CLQ_OCOT_Finding__c/fields/Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Domain_Name__c</fullName>
    <label>Domain Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>