force-app/main/default/objects/CLQ_OCOT_Finding__c/fields/Domain_Text__c.field-meta.xml
<CustomField>
    <fullName>Domain_Text__c</fullName>
    <label>Domain Text</label>
    <length>40</length>
    <type>Text</type>
</CustomField>