force-app/main/default/objects/CLQ_OCOT_Finding__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <length>200</length>
    <type>Text</type>
</CustomField>