force-app/main/default/objects/CLQ_OCOT_Finding__c/fields/Rule_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Short_Name__c</fullName>
    <label>Rule Short Name</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>