force-app/main/default/objects/CLQ_OCOT_Finding__c/fields/StandardFindingsName__c.field-meta.xml
<CustomField>
    <fullName>StandardFindingsName__c</fullName>
    <label>StandardFindingsName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>